[gd_scene load_steps=46 format=3 uid="uid://basw27b6ma1d"]

[ext_resource type="Script" path="res://Character/Blondie/Player.gd" id="1_s81ug"]
[ext_resource type="Texture2D" uid="uid://cy0hftqwxks5o" path="res://art/Character/Attack-01/Attack-01-Sheet.png" id="2_45dob"]
[ext_resource type="Texture2D" uid="uid://c8xpt0to76bal" path="res://art/Character/Idle/Idle-Sheet.png" id="2_kseu8"]
[ext_resource type="Texture2D" uid="uid://bjcux3jkoix27" path="res://art/Character/Run/Run-Sheet.png" id="4_7qvug"]
[ext_resource type="Texture2D" uid="uid://d0cw2thq31r0v" path="res://art/Character/Jumlp-All/Jump-All-Sheet.png" id="6_06dxh"]
[ext_resource type="Script" path="res://Character/Common/States/CharacterStateMachine.gd" id="8_aiu54"]
[ext_resource type="Script" path="res://Character/Common/Sword.gd" id="8_onhrg"]
[ext_resource type="Script" path="res://Character/Common/States/GroundState.gd" id="9_a25ni"]
[ext_resource type="Script" path="res://Character/Common/FacingCollisionShape2D.gd" id="9_oamxf"]
[ext_resource type="Script" path="res://Character/Common/States/AirState.gd" id="10_enl13"]
[ext_resource type="Script" path="res://Character/Common/States/LandingState.gd" id="11_05p03"]
[ext_resource type="Script" path="res://Character/Common/States/Attack.gd" id="12_txprc"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_7fqcc"]
height = 48.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3hh1x"]
bg_color = Color(0.466667, 0.807843, 0.184314, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="Animation" id="Animation_2oheu"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_krue6"]
resource_name = "attack"

[sub_resource type="Animation" id="Animation_1jqps"]
resource_name = "attack1"
length = 0.35
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_45dob")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_hi1ot"]
resource_name = "attack2"
length = 0.35
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_45dob")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_50suv"]
resource_name = "double_jump"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("6_06dxh")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [15]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [2, 3, 4, 5, 6, 7, 8, 9, 10]
}

[sub_resource type="Animation" id="Animation_mrnlf"]
resource_name = "idle"
length = 0.493
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_kseu8")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_x2owe"]
resource_name = "jump_end"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("6_06dxh")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [15]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [10]
}

[sub_resource type="Animation" id="Animation_qaoay"]
resource_name = "jump_start"
length = 0.85
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("6_06dxh")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [15]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8]
}

[sub_resource type="Animation" id="Animation_xt52k"]
resource_name = "run"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_7qvug")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ju7hb"]
_data = {
"RESET": SubResource("Animation_2oheu"),
"attack": SubResource("Animation_krue6"),
"attack1": SubResource("Animation_1jqps"),
"attack2": SubResource("Animation_hi1ot"),
"double_jump": SubResource("Animation_50suv"),
"idle": SubResource("Animation_mrnlf"),
"jump_end": SubResource("Animation_x2owe"),
"jump_start": SubResource("Animation_qaoay"),
"run": SubResource("Animation_xt52k")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_mjq2k"]
animation = &"attack1"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_iwuaa"]
animation = &"attack2"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_8n8bv"]
animation = &"double_jump"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_7ishj"]
animation = &"jump_end"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_qto5k"]
animation = &"jump_start"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_3aqh5"]
animation = &"idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_qt1tg"]
animation = &"run"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ms4vu"]
animation = &"run"

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_odhwi"]
blend_point_0/node = SubResource("AnimationNodeAnimation_3aqh5")
blend_point_0/pos = 0.0
blend_point_1/node = SubResource("AnimationNodeAnimation_qt1tg")
blend_point_1/pos = 1.0
blend_point_2/node = SubResource("AnimationNodeAnimation_ms4vu")
blend_point_2/pos = -1.0
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ermey"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_s1356"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ru48k"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_yhel7"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_hcdsl"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ngaer"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_k2u11"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_82tbp"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_xpaoy"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_808gj"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_iabpi"]
states/attack1/node = SubResource("AnimationNodeAnimation_mjq2k")
states/attack1/position = Vector2(247, 311)
states/attack2/node = SubResource("AnimationNodeAnimation_iwuaa")
states/attack2/position = Vector2(578, 311)
states/double_jump/node = SubResource("AnimationNodeAnimation_8n8bv")
states/double_jump/position = Vector2(578, -169)
states/jump_end/node = SubResource("AnimationNodeAnimation_7ishj")
states/jump_end/position = Vector2(712, -37)
states/jump_start/node = SubResource("AnimationNodeAnimation_qto5k")
states/jump_start/position = Vector2(423, -37)
states/move/node = SubResource("AnimationNodeBlendSpace1D_odhwi")
states/move/position = Vector2(423, 137)
transitions = ["Start", "move", SubResource("AnimationNodeStateMachineTransition_ermey"), "move", "jump_start", SubResource("AnimationNodeStateMachineTransition_s1356"), "jump_start", "jump_end", SubResource("AnimationNodeStateMachineTransition_ru48k"), "jump_end", "move", SubResource("AnimationNodeStateMachineTransition_yhel7"), "jump_start", "double_jump", SubResource("AnimationNodeStateMachineTransition_hcdsl"), "double_jump", "jump_end", SubResource("AnimationNodeStateMachineTransition_ngaer"), "move", "attack1", SubResource("AnimationNodeStateMachineTransition_k2u11"), "attack1", "attack2", SubResource("AnimationNodeStateMachineTransition_82tbp"), "attack1", "move", SubResource("AnimationNodeStateMachineTransition_xpaoy"), "attack2", "move", SubResource("AnimationNodeStateMachineTransition_808gj")]
graph_offset = Vector2(79, 182.549)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dnqvk"]
size = Vector2(25.75, 41)

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_s81ug")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(3, -6)
shape = SubResource("CapsuleShape2D_7fqcc")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2.545, 2.545)

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = -14.0
offset_top = -29.0
offset_right = 22.0
offset_bottom = -23.0
theme_override_colors/font_color = Color(0.556863, 0.133333, 0.517647, 1)
theme_override_font_sizes/font_size = 6
theme_override_styles/fill = SubResource("StyleBoxFlat_3hh1x")
value = 80.0
show_percentage = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ju7hb")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ju7hb")
}
tree_root = SubResource("AnimationNodeStateMachine_iabpi")
anim_player = NodePath("../AnimationPlayer")
parameters/move/blend_position = 0

[node name="CharacterStateMachine" type="Node" parent="." node_paths=PackedStringArray("animation_tree", "current_state", "character")]
script = ExtResource("8_aiu54")
animation_tree = NodePath("../AnimationTree")
current_state = NodePath("Ground")
character = NodePath("..")

[node name="Ground" type="Node" parent="CharacterStateMachine" node_paths=PackedStringArray("air_state", "attack_state")]
script = ExtResource("9_a25ni")
air_state = NodePath("../Air")
attack_state = NodePath("../Attack")

[node name="Air" type="Node" parent="CharacterStateMachine" node_paths=PackedStringArray("landing_state")]
script = ExtResource("10_enl13")
landing_state = NodePath("../Landing")
double_jump_velocity = -300.0

[node name="Landing" type="Node" parent="CharacterStateMachine" node_paths=PackedStringArray("ground_state")]
script = ExtResource("11_05p03")
landing_animation_name = "jump_end"
ground_state = NodePath("../Ground")
can_move = false

[node name="Attack" type="Node" parent="CharacterStateMachine" node_paths=PackedStringArray("return_state")]
script = ExtResource("12_txprc")
return_state = NodePath("../Ground")
can_move = false

[node name="Timer" type="Timer" parent="CharacterStateMachine/Attack"]
wait_time = 0.3
one_shot = true

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_kseu8")
hframes = 4

[node name="Sword" type="Area2D" parent="."]
monitoring = false
script = ExtResource("8_onhrg")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sword"]
position = Vector2(25, -6)
shape = SubResource("RectangleShape2D_dnqvk")
script = ExtResource("9_oamxf")

[connection signal="facing_direction_changed" from="." to="Sword/CollisionShape2D" method="_on_player_facing_direction_changed"]
[connection signal="animation_finished" from="AnimationTree" to="CharacterStateMachine/Landing" method="_on_animation_tree_animation_finished"]
[connection signal="animation_finished" from="AnimationTree" to="CharacterStateMachine/Attack" method="_on_animation_tree_animation_finished"]
[connection signal="body_entered" from="Sword" to="Sword" method="_on_body_entered"]
